[metadata]
name = Pymacs
version = 0.25
author = François Pinard
author_email = pinard@iro.umontreal.ca
summary = Interface between Emacs Lisp and Python
description_file = README.md
project_url = Source, http://pymacs.progiciels-bpi.ca
requires_python = >=2.2
license = GPLv2

[files]
modules = Pymacs
extra_files = 
    COPYING
    Makefile
    Pymacs.py.in
    README.md
    THANKS
    TODO
    pppp
    pppp.rst.in
    ppppconfig.py
    pymacs.el.in
    pymacs.rst.in
    setup.cfg
    setup.py
